--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 <body>
 
   <div class="container">
-    <h2>Product Comparison</h2>
+    <h2>Product Comparison Page</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel optio unde pariatur nostrum eius, modi aut totam consequuntur corrupti sit eum quis nulla quae, corporis et accusamus vero, non quisquam.</p>
 
     <div class="row">
       <!-- Left Side -->
