--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container">
     <h2>Product Comparison Page</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel optio unde pariatur nostrum eius, modi aut totam consequuntur corrupti sit eum quis nulla quae, corporis et accusamus vero, non quisquam.</p>
-
+<h1>Branches In Github</h1>
     <h1>Git ADD</h1>
     <div class="row">
       <!-- Left Side -->
